[kubernetes] 调整打印日志